
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090
  Url     : https://github.com/shtrih-m/javapos_shtrih
  
********************************************************************************

  October 25 2017
  deviceServiceVersion = 1013475
	
  [-] Fixed error with discount
  
********************************************************************************

  October 19 2017
  deviceServiceVersion = 1013474
	
  [-] Fixed error with double discount
  
********************************************************************************

  October 18 2017
  deviceServiceVersion = 1013473
	
  [-] Removed writing cut mode and drawer mode in tables
  
********************************************************************************

  October 10 2017
  deviceServiceVersion = 1013471
	
  [+] Added EoD support for other then Mobile-F devices
  [*] Fixed long OFD response handling

********************************************************************************

  October 10 2017
  deviceServiceVersion = 1013470
	
  [-] Fixed error with saving properties
  [-] Fixed error with printing receipt header
  
********************************************************************************

  October 08 2017
  deviceServiceVersion = 1013469
	
  [*] Fixed error when writing TLV and receipt not opened
  [+] Added fsWriteTag(int tagId, long value, int length), fsStartCorrectionReceipt() and fsCancelDocument() methods
  
********************************************************************************

  October 07 2017
  deviceServiceVersion = 1013468
	
  [*] Improved BluetoothPort performance in certain circumstances

********************************************************************************

  October 03 2017
  deviceServiceVersion = 1013467
	
  [*] Fixed SMFPTR_DIO_PRINT_CORRECTION2 added result code check
