@@ -7,7 +7,6 @@ package com.shtrih.jpos.fiscalprinter.receipt;
 /**
  * @author V.Kravtsov
  */
-
 import com.shtrih.barcode.PrinterBarcode;
 
 import java.util.Vector;
@@ -111,8 +110,9 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
         getDevice().printFSHeader();
         subtotalPrinted = false;
 
-        if (getParams().openReceiptOnBegin)
+        if (getParams().openReceiptOnBegin) {
             openReceipt(true);
+        }
     }
 
     public void openReceipt(boolean isSale) throws Exception {
@@ -129,7 +129,7 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void printRecItem(String description, long price, int quantity,
-                             int vatInfo, long unitPrice, String unitName) throws Exception {
+            int vatInfo, long unitPrice, String unitName) throws Exception {
         openReceipt(true);
         printSale(price, quantity, unitPrice, getParams().department,
                 vatInfo, description, unitName);
@@ -515,14 +515,14 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void printRecTotal(long total, long payment, long payType,
-                              String description) throws Exception {
+            String description) throws Exception {
         checkTotal(getSubtotal(), total);
         addPayment(payment, payType);
         clearPrePostLine();
     }
 
     public void printRecItemVoid(String description, long price, int quantity,
-                                 int vatInfo, long unitPrice, String unitName) throws Exception {
+            int vatInfo, long unitPrice, String unitName) throws Exception {
         openReceipt(false);
 
         if (isSaleReceipt()) {
@@ -575,7 +575,7 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void printRecItemAdjustment(int adjustmentType, String description,
-                                       long amount, int vatInfo) throws Exception {
+            long amount, int vatInfo) throws Exception {
         checkDiscountsEnabled();
         switch (adjustmentType) {
             case FiscalPrinterConst.FPTR_AT_AMOUNT_DISCOUNT:
@@ -599,12 +599,12 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
                         Localizer.getString(Localizer.invalidParameterValue)
-                                + "adjustmentType");
+                        + "adjustmentType");
         }
     }
 
     public void printRecSubtotalAdjustment(int adjustmentType,
-                                           String description, long amount) throws Exception {
+            String description, long amount) throws Exception {
         checkDiscountsEnabled();
         checkAdjustment(adjustmentType, amount);
         switch (adjustmentType) {
@@ -629,12 +629,12 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
                         Localizer.getString(Localizer.invalidParameterValue)
-                                + "AdjustmentType");
+                        + "AdjustmentType");
         }
     }
 
     public void printRecVoidItem(String description, long amount, int quantity,
-                                 int adjustmentType, long adjustment, int vatInfo) throws Exception {
+            int adjustmentType, long adjustment, int vatInfo) throws Exception {
         openReceipt(false);
         long total = Math.round(amount * quantity / 1000.0);
         if (isSaleReceipt()) {
@@ -656,17 +656,17 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void printRecPackageAdjustment(int adjustmentType,
-                                          String description, String vatAdjustment) throws Exception {
+            String description, String vatAdjustment) throws Exception {
         printRecPackageAdjustment2(adjustmentType, vatAdjustment, 1);
     }
 
     public void printRecPackageAdjustVoid(int adjustmentType,
-                                          String vatAdjustment) throws Exception {
+            String vatAdjustment) throws Exception {
         printRecPackageAdjustment2(adjustmentType, vatAdjustment, -1);
     }
 
     public void printRecPackageAdjustment2(int adjustmentType,
-                                           String vatAdjustment, int factor) throws Exception {
+            String vatAdjustment, int factor) throws Exception {
         checkDiscountsEnabled();
         PackageAdjustments adjustments = new PackageAdjustments();
         adjustments.parse(vatAdjustment);
@@ -701,7 +701,7 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
                         Localizer.getString(Localizer.invalidParameterValue)
-                                + "adjustmentType");
+                        + "adjustmentType");
         }
     }
 
@@ -732,12 +732,12 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
                         Localizer.getString(Localizer.invalidParameterValue)
-                                + "adjustmentType");
+                        + "adjustmentType");
         }
     }
 
     public void printRecItemAdjustmentVoid(int adjustmentType,
-                                           String description, long amount, int vatInfo) throws Exception {
+            String description, long amount, int vatInfo) throws Exception {
         checkDiscountsEnabled();
         checkAdjustment(adjustmentType, amount);
         switch (adjustmentType) {
@@ -762,12 +762,12 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
                         Localizer.getString(Localizer.invalidParameterValue)
-                                + "adjustmentType");
+                        + "adjustmentType");
         }
     }
 
     public void printRecItemRefund(String description, long amount,
-                                   int quantity, int vatInfo, long unitAmount, String unitName)
+            int quantity, int vatInfo, long unitAmount, String unitName)
             throws Exception {
         openReceipt(false);
         printSale(amount, quantity, unitAmount, getParams().department, vatInfo,
@@ -776,7 +776,7 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void printRecItemRefundVoid(String description, long amount,
-                                       int quantity, int vatInfo, long unitAmount, String unitName)
+            int quantity, int vatInfo, long unitAmount, String unitName)
             throws Exception {
         openReceipt(true);
         printStorno(amount, quantity, unitAmount, getParams().department, vatInfo,
@@ -832,7 +832,7 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             return quantity;
         }
 
-        for (; ; ) {
+        for (;;) {
             double d = unitPrice * quantity;
             long amount = MathUtils.round(d / 1000.0);
             if (amount >= price) {
@@ -844,7 +844,7 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void printStorno(long price, long quantity, long unitPrice,
-                            int department, int vatInfo, String description) throws Exception {
+            int department, int vatInfo, String description) throws Exception {
         if (unitPrice == 0) {
             if (price != 0) {
                 quantity = 1000;
@@ -853,13 +853,14 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
         } else if (quantity == 0) {
             quantity = 1000;
         }
-        quantity = correctQuantity(price, quantity, unitPrice);
-        doPrintSale(price, quantity, unitPrice, department, vatInfo, description, "", true);
+        doPrintSale(price, quantity, unitPrice, department, vatInfo,
+                description, "", true);
+
     }
 
     public void printSale(long price, long quantity, long unitPrice,
-                          int department, int vatInfo, String description,
-                          String unitName) throws Exception {
+            int department, int vatInfo, String description,
+            String unitName) throws Exception {
         if (unitPrice == 0) {
             if (price != 0) {
                 quantity = 1000;
@@ -874,83 +875,67 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
     }
 
     public void doPrintSale(long price, long quantity, long unitPrice,
-                            int department, int vatInfo, String description, String unitName,
-                            boolean isStorno) throws Exception {
+            int department, int vatInfo, String description, String unitName,
+            boolean isStorno) throws Exception {
         logger.debug(
                 "price: " + price
-                        + ", quantity: " + quantity
-                        + ", unitPrice: " + unitPrice);
+                + ", quantity: " + quantity
+                + ", unitPrice: " + unitPrice);
 
         double d = unitPrice * Math.abs(quantity);
         long amount = getParams().itemTotalAmount == null ? MathUtils.round((d / 1000.0)) : getParams().itemTotalAmount;
-
-        /*
-         if (isStorno) {
-         for (int i = 0; i < recItems.size(); i++) {
-         Object recItem = recItems.get(i);
-         if (recItem instanceof FSSaleReceiptItem) {
-         FSSaleReceiptItem item = (FSSaleReceiptItem) recItem;
-         if (item.getTotal() > 0) {
-         if (item.getTax1() == vatInfo) {
-         if (item.getTotalWithVoids() >= price) {
-         item.addVoidAmount(price);
-         break;
-         }
-         }
-         }
-         }
-         }
-         }
-         */
         FSSaleReceiptItem item = null;
-        if (getParams().combineReceiptItems) {
-            item = findItem(unitPrice, description);
-            if (item != null) {
-                if (isStorno) {
-                    if (item.getQuantity() >= quantity) {
-                        item.setQuantity(item.getQuantity() - quantity);
-                    } else {
-                        item = null;
-                    }
-                } else {
+        if (isStorno) {
+            for (int i = recItems.size() - 1; i >= 0; i--) {
+                item = (FSSaleReceiptItem) recItems.get(i);
+                if ((item.getText().equalsIgnoreCase(description))
+                        && (item.getPrice() == price)
+                        && (item.getQuantity() >= quantity)) {
+                    break;
+                }
+            }
+            if (item == null) {
+                throw new Exception("Voided receipt item not found");
+            }
+            item.setQuantity(item.getQuantity() - quantity);
+            if (item.getQuantity() == 0) {
+                items.remove(item);
+                recItems.remove(item);
+            }
+            addTotal(-amount);
+        } else {
+            if (getParams().combineReceiptItems) {
+                item = findItem(unitPrice, description);
+                if (item != null) {
                     item.setQuantity(item.getQuantity() + quantity);
                 }
             }
-        }
-        if (item == null) {
-            item = new FSSaleReceiptItem();
-            item.setPrice(unitPrice);
-            item.setUnitPrice(unitPrice);
-            item.setQuantity(quantity);
-            item.setDepartment(department);
-            item.setTax1(vatInfo);
-            item.setTax2(0);
-            item.setTax3(0);
-            item.setTax4(0);
-            item.setText(description);
-            item.setPreLine(getPreLine());
-            item.setPostLine(getPostLine());
-            item.setUnitName(unitName);
-            item.setIsStorno(isStorno);
+            if (item == null) {
+                item = new FSSaleReceiptItem();
+                item.setPrice(unitPrice);
+                item.setUnitPrice(unitPrice);
+                item.setQuantity(quantity);
+                item.setDepartment(department);
+                item.setTax1(vatInfo);
+                item.setTax2(0);
+                item.setTax3(0);
+                item.setTax4(0);
+                item.setText(description);
+                item.setPreLine(getPreLine());
+                item.setPostLine(getPostLine());
+                item.setUnitName(unitName);
+                item.setIsStorno(isStorno);
 
-            item.setTotalAmount(getParams().itemTotalAmount);
-            getParams().itemTotalAmount = null;
+                item.setTotalAmount(getParams().itemTotalAmount);
+                getParams().itemTotalAmount = null;
 
-            item.setPaymentType(getParams().paymentType);
-            item.setSubjectType(getParams().subjectType);
+                item.setPaymentType(getParams().paymentType);
+                item.setSubjectType(getParams().subjectType);
 
-
-            items.add(item);
-            recItems.add(item);
-
-        }
-        if (!isStorno) {
+                items.add(item);
+                recItems.add(item);
+            }
             lastItem = item;
-        }
-
-        if (isStorno) {
-            addTotal(-amount);
-        } else {
             addTotal(amount);
         }
         clearPrePostLine();
@@ -1088,12 +1073,12 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
                         Localizer.getString(Localizer.invalidParameterValue)
-                                + "adjustmentType");
+                        + "adjustmentType");
         }
     }
 
     private void checkAdjustments(int adjustmentType,
-                                  PackageAdjustments adjustments) throws Exception {
+            PackageAdjustments adjustments) throws Exception {
         PackageAdjustment adjustment;
         for (int i = 0; i < adjustments.size(); i++) {
             adjustment = adjustments.getItem(i);
