@@ -43,7 +43,7 @@ javadoc.notree=false
 dist.jar=${dist.dir}/shtrihjavapos.jar
 platform.active=JDK_1.6
 annotation.processing.enabled=true
-main.class=MainDialog
+main.class=net.jmge.gif.Gif89Encoder
 dist.javadoc.dir=${dist.dir}/javadoc
 src.src.dir=${file.reference.Core-src}
 file.reference.Source-jpos=../jpos
