@@ -7,6 +7,13 @@
   
 ********************************************************************************
 
+  October 27 2017
+  deviceServiceVersion = 1013476
+	
+  [-] Fixed error with void items
+  
+********************************************************************************
+
   October 25 2017
   deviceServiceVersion = 1013475
 	
